Fixed proficiencies collapsing. Version bump 1.1.1

--- a/styles.css
+++ b/styles.css
@@ -683,6 +683,7 @@ textarea.edit-property {
 }
 .sidebar .section .spell.collapsed .description,
 .sidebar .section .inv-item.collapsed .description,
+.sidebar .section .proficiency.collapsed .description,
 .sidebar .section .spell.collapsed .school,
 .sidebar .section .item.collapsed .edit-panel
  {
